[tool.poetry]
name = "adventofcodeutils"
version = "0.4.1"
description = "This repository contains some utils used by my advent of code projects. "
authors = ["Roel Adriaans <roel@adriaans.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^25.1.0"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.1"
tox = "^4.21.2"
pre-commit = "^4.0.0"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
